# AIsensing

./: .gitignore  LICENSE  README.md
AIRadar/: AIRadar_readme.md  AIradar_autopara.py  AIradar_comm_data_g1.md  AIradar_comm_data_g2.md  AIradar_comm_dataset_c1.py  AIradar_comm_dataset_g1.py  AIradar_comm_dataset_g2.py  AIradar_comm_diag.py  AIradar_comm_model_g1.py  AIradar_comm_model_g1b.py  AIradar_comm_model_g1c.py  AIradar_comm_model_g1d.py  AIradar_comm_model_g1d2.py  AIradar_comm_model_g2.py  AIradar_comm_model_g2b.py  AIradar_comm_model_g2c.py  AIradar_comm_model_g3.py  AIradar_comm_model_g3b.py  AIradar_comm_model_g4.py  AIradar_comm_model_g5.py  AIradar_comm_model_g6.py  AIradar_comm_model_g6_comm.py  AIradar_comm_model_g6_commtrain.py  AIradar_comm_model_g6_commtrain2.py  AIradar_comm_models.py  AIradar_comm_models_v2.py  AIradar_dataset.py  AIradar_datasetraytracing.py  AIradar_datasetraytracingv2.py  AIradar_datasetraytracingv3.py  AIradar_datasetv3.py  AIradar_datasetv4.py  AIradar_datasetv5.py  AIradar_datasetv6.py  AIradar_datasetv7.py  AIradar_datasetv8.py  AIradar_model_comparison.py  AIradar_processing.py  AIradar_train.py  AIradar_trainraytracing.py  (+43 more)
AIRadar/AIRadarLib/: channel_simulation.py  datautil.py  modeling_RadarNet.py  modeling_TimeNet.py  modeling_transformer.py  ofdm_decoder.py  pretrain_dataset.py  radar_det.py  signal_processing.py  target_utils.py  test_visualization.py  visualization.py  waveform_test_adf4159.py  waveform_utils.py
AIRadar/docs/: G3_Communication_Model_Technical_Documentation.md  G3_communication_radar_model.md
(+435 files in other folders)
