[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "AIRadarLib"
version = "0.1.0"
description = "AIRadar python package"
authors = [{ name = "Kaikai Liu", email = "kaikai.liu@sjsu.edu" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy"
]

[project.urls]
"Homepage" = "https://github.com/lkk688/AIsensing/tree/main/AIRadar"